--- a/core/page.ejs
+++ b/core/page.ejs
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title><%= htmlWebpackPlugin.options.title %></title>  
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/feathericon.min.css">
+
   </head>
   <body>
     <div id="root"></div>
